--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-    html {
-      font-family: 'Raleway', sans-serif;
-    }
+  html {
+    font-family: "Raleway", sans-serif;
   }
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+}
+body {
+  background-color: black;
+}
+
+@keyframes drop-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateX(-6px);
+  }
+}
+
+h1 {
+  animation: ease 1.3s drop-in;
+  animation-fill-mode: forwards;
+}
+.projectCard:hover {
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(246, 246, 250, 0.25) 0px 50px 100px -20px,
+    rgba(247, 241, 241, 0.3) 0px 0px 10px -10px;
+  background-color: black;
+  border-color: white;
+  border-width: 0.1px;
+
+  transition: 0.5s ease-in-out;
+}
